# JobAssistSkill

./: .gitignore  AI_AGENT_DOCS.md  CAREER_ASSISTANT.md  README.md  SKILL.md  cv_template.tex  main.py  opencode_help.txt  prompts.js  pyproject.toml  pytest.ini  quick_search.py  requirements.txt  run_all.py  sample_job_postings.json  setup.py
job_assist_skill/: __init__.py  keywords.py
job_assist_skill/assistant/: __init__.py  config.yaml  memory.py  preferences.py  prompts_loader.py  service.py  skill.yaml  test_b64.py
job_assist_skill/assistant/email/: __init__.py  mailto_client.py
job_assist_skill/assistant/pipeline/: __init__.py  aggregator.py  alignment.py  cover_letter.py  cv_diff_viewer.py  email_generator.py  job_parser.py  latex_compiler.py  llm_client.py  replacer.py  tailoring.py
job_assist_skill/assistant/prompts/: __init__.py  loader.py
job_assist_skill/assistant/ranker/: __init__.py  keyword_scorer.py
job_assist_skill/assistant/scrapers/: __init__.py  hiring_posts.py  job_postings.py
job_assist_skill/assistant/storage/: __init__.py  feedback.db  feedback.py
job_assist_skill/assistant/ui/: __init__.py  app.py
job_assist_skill/assistant/ui/templates/: approved.html  candidate_detail.html  dashboard.html
job_assist_skill/scraper/: __init__.py  callbacks.py  utils.py
job_assist_skill/scraper/core/: __init__.py  auth.py  browser.py  exceptions.py  utils.py
job_assist_skill/scraper/models/: __init__.py  company.py  job.py  person.py  post.py
job_assist_skill/scraper/scrapers/: __init__.py  base.py  company.py  company_posts.py  job.py  job_search.py  person.py  post_search.py
tests/: conftest.py  test_email_and_auth.py  test_email_generator.py  test_feedback_store.py  test_job_page_parser.py  test_job_search_scraper.py  test_main_cli.py  test_memory.py  test_prompt_driven_pipeline.py  test_prompt_loader.py  test_prompt_pipeline.py  test_service.py  test_tailoring_pipeline.py  test_ui_and_cli.py  test_ui_app.py
